pyroscope (0.4.1) jaunty; urgency=low

  * rtcontrol: Removed short options from actions that are non-interactive
    by default, i.e. -S(top) and -C(lose); update your scripts accordingly
  * rtcontrol: "-s*" sorts according to the given output format
  * rtcontrol: "--stats" and "--summary" to print a statistical summary; 
    note that for some fields (e.g. dates) and some kinds of formatting the
    summary values might not make sense
  * rtcontrol: Added "--detach", so you can call rtcontrol directly from
    rtorrent methods and event handlers
  * rtcontrol: Added "field=/regex/" pattern filter
  * rtcontrol: Added Tempita output templates, they have to start with 
    '{{' to be recognized, use '{{#}}' if you don't start with a field; 
    this allows "if" and "for" loops, for more on the syntax, see
    http://pythonpaste.org/tempita/
  * rtcontrol: Added "--output-template" to pass output control to a
    Tempita template.
  * rtcontrol: Output formats can now be file: URLs that get resolved
    automatically; paths can be absolute, relative to the configuration
    directory or start with "~" for paths in the user's home. Note that
    the file content is stripped at the end (i.e. trailing spaces and
    newlines are removed).
  * chtor: "-s field" now deletes the field (assignment without any value)
  * chtor: "-no-ssl" forces announce URLs to be 'http'
  * mktor: the chtor "--set" option now also works with mktor
  * lstor: Added virtual "__size__" field
  * Bugfix: Conditions nested 2 or more levels didn't work

 -- pyroscope <pyroscope.project@gmail.com>  Sat, 02 Apr 2011 16:43:35 +0200

pyroscope (0.3.10) hardy; urgency=low

  * New "hashcheck" tool to check data against existing torrent file
  * rtcontrol: New option "--tee-view" to ADDITIONALLY show search
    results in ncurses view (modifies -V and --to-view behaviour)
  * rtcontrol: New options "--purge" and "--cull" for data deletion
  * rtcontrol: Prefix "--sort-fields" names with a '-' to get